--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1,user-scalable=yes"
     />
-    <title>Corretto &#8211; A Modern Theme for Coffee Shops and Cafés</title>
+    <title>Bereka Coffee</title>
     <style type="text/css" data-type="vc_shortcodes-custom-css">
       .vc_custom_1523344111756 {
         padding-top: 120px !important;
