--- a/harrar/index.html
+++ b/harrar/index.html
@@ -4141,7 +4141,7 @@
                               <div class="wpb_wrapper">
                                 <div class="eltdf-section-title-holder">
                                   <div class="eltdf-st-inner">
-                                    <h2 class="eltdf-st-title">Yirgachefe</h2>
+                                    <h2 class="eltdf-st-title">Harrar</h2>
                                   </div>
                                 </div>
 
@@ -4150,23 +4150,21 @@
                                 >
                                   <div class="wpb_wrapper">
                                     <h6>
-                                      Ethiopian Yirgacheffe coffee is one of the
-                                      world's most popular coffees.Its light
-                                      flavor and delectable aromas make it an
-                                      ideal beverage choice. Yirgacheffe,
-                                      located within Sidama, is a small region
-                                      in southern Ethiopia where the beans
-                                      thrive. Because of the dense vegetation,
-                                      healthy soil, and high elevations, the
-                                      plants grow naturally. Ethiopia has a
-                                      tropical climate with moderate wet and dry
-                                      seasons. Yirgacheffe plants can be
-                                      harvested without the use of agricultural
-                                      chemicals due to the ideal climate.From
-                                      October to December, Yirgacheffe beans are
-                                      harvested. Yirgacheffe is an excellent
-                                      choice if you're looking for a green and
-                                      organic coffee.
+                                      Harrar is found in the Oromia region of
+                                      Southern Ethiopia at elevations ranging
+                                      from 1510 to 2120 meters above sea level.
+                                      Harrar is dry processed, as opposed to wet
+                                      processed Yirgacheffe. The coffee fruit is
+                                      harvested from the trees and dried in the
+                                      sun during dry processing. The dry process
+                                      infuses the flavors of the fruit into the
+                                      bean, which is an important aspect of the
+                                      overall flavor. Harrar coffee beans are
+                                      among the oldest still being produced.
+                                      Hand harvesting and processing are used
+                                      for the beans. The bean is used to make
+                                      coffee, but the shells are also used to
+                                      make hasher-qahwa, an Ethiopian tea.
                                     </h6>
                                   </div>
                                 </div>
@@ -4186,8 +4184,8 @@
                               <div class="wpb_wrapper">
                                 <div class="eltdf-google-map-holder">
                                   <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126932.69618080388!2d38.13624011582523!3d6.178017890456401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x17b09c469bd1adc5%3A0xe16ccadedbe59507!2z4Yut4Yit4YyL4Yqt4Y2M4Y2i!5e0!3m2!1sen!2set!4v1646741484188!5m2!1sen!2set"
-                                    width="100%"
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31497.838803806015!2d42.10063912880962!3d9.3128909728271!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1631bda3c73a509d%3A0x47a0ad82e9e99ed6!2sHarar!5e0!3m2!1sen!2set!4v1646741353963!5m2!1sen!2set"
+                                    width="100%s"
                                     height="600"
                                     style="border: 0"
                                     allowfullscreen=""
