--- a/Limu/index.html
+++ b/Limu/index.html
@@ -4141,7 +4141,7 @@
                               <div class="wpb_wrapper">
                                 <div class="eltdf-section-title-holder">
                                   <div class="eltdf-st-inner">
-                                    <h2 class="eltdf-st-title">Yirgachefe</h2>
+                                    <h2 class="eltdf-st-title">Limu</h2>
                                   </div>
                                 </div>
 
@@ -4150,23 +4150,12 @@
                                 >
                                   <div class="wpb_wrapper">
                                     <h6>
-                                      Ethiopian Yirgacheffe coffee is one of the
-                                      world's most popular coffees.Its light
-                                      flavor and delectable aromas make it an
-                                      ideal beverage choice. Yirgacheffe,
-                                      located within Sidama, is a small region
-                                      in southern Ethiopia where the beans
-                                      thrive. Because of the dense vegetation,
-                                      healthy soil, and high elevations, the
-                                      plants grow naturally. Ethiopia has a
-                                      tropical climate with moderate wet and dry
-                                      seasons. Yirgacheffe plants can be
-                                      harvested without the use of agricultural
-                                      chemicals due to the ideal climate.From
-                                      October to December, Yirgacheffe beans are
-                                      harvested. Yirgacheffe is an excellent
-                                      choice if you're looking for a green and
-                                      organic coffee.
+                                      Limu coffee is grown in southwest/south
+                                      central Ethiopia at elevations ranging
+                                      from 3,600 to 6,200 feet, producing
+                                      medium-sized coffee beans with a
+                                      distinctive roundish shape and green
+                                      color. Limu is a brand name.
                                     </h6>
                                   </div>
                                 </div>
@@ -4186,7 +4175,7 @@
                               <div class="wpb_wrapper">
                                 <div class="eltdf-google-map-holder">
                                   <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126932.69618080388!2d38.13624011582523!3d6.178017890456401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x17b09c469bd1adc5%3A0xe16ccadedbe59507!2z4Yut4Yit4YyL4Yqt4Y2M4Y2i!5e0!3m2!1sen!2set!4v1646741484188!5m2!1sen!2set"
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d503269.40298478777!2d36.08568489467082!3d9.783642037830345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x165162117f7e2e73%3A0x465dfc1d1073890b!2z4YiK4Yia!5e0!3m2!1sen!2set!4v1646740612378!5m2!1sen!2set"
                                     width="100%"
                                     height="600"
                                     style="border: 0"
