--- a/jimma/index.html
+++ b/jimma/index.html
@@ -4141,7 +4141,7 @@
                               <div class="wpb_wrapper">
                                 <div class="eltdf-section-title-holder">
                                   <div class="eltdf-st-inner">
-                                    <h2 class="eltdf-st-title">Yirgachefe</h2>
+                                    <h2 class="eltdf-st-title">Jimma</h2>
                                   </div>
                                 </div>
 
@@ -4150,23 +4150,12 @@
                                 >
                                   <div class="wpb_wrapper">
                                     <h6>
-                                      Ethiopian Yirgacheffe coffee is one of the
-                                      world's most popular coffees.Its light
-                                      flavor and delectable aromas make it an
-                                      ideal beverage choice. Yirgacheffe,
-                                      located within Sidama, is a small region
-                                      in southern Ethiopia where the beans
-                                      thrive. Because of the dense vegetation,
-                                      healthy soil, and high elevations, the
-                                      plants grow naturally. Ethiopia has a
-                                      tropical climate with moderate wet and dry
-                                      seasons. Yirgacheffe plants can be
-                                      harvested without the use of agricultural
-                                      chemicals due to the ideal climate.From
-                                      October to December, Yirgacheffe beans are
-                                      harvested. Yirgacheffe is an excellent
-                                      choice if you're looking for a green and
-                                      organic coffee.
+                                      Jimma coffee is located around southwest
+                                      of Ethiopia which is a large producer of
+                                      commercial-grade coffee.Jimma is
+                                      characterized by a nutty aroma,
+                                      full-bodied and chocolaty taste. And the
+                                      Altitude is 1400–2000 m above sea level
                                     </h6>
                                   </div>
                                 </div>
@@ -4186,7 +4175,7 @@
                               <div class="wpb_wrapper">
                                 <div class="eltdf-google-map-holder">
                                   <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126932.69618080388!2d38.13624011582523!3d6.178017890456401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x17b09c469bd1adc5%3A0xe16ccadedbe59507!2z4Yut4Yit4YyL4Yqt4Y2M4Y2i!5e0!3m2!1sen!2set!4v1646741484188!5m2!1sen!2set"
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3941.4446913329903!2d38.76135251493451!3d8.931104592973245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b83b6d23ab9b1%3A0x97b75d80e7061c70!2sYirgacheffe%20Coffee%20Farmers%20Cooperative%20Union!5e0!3m2!1sen!2set!4v1646291831839!5m2!1sen!2set"
                                     width="100%"
                                     height="600"
                                     style="border: 0"
