--- a/nekemte/index.html
+++ b/nekemte/index.html
@@ -4252,11 +4252,11 @@
                           <a href="about-us/">About</a>
                         </li>
                         <li
-                          id="menu-item-237"
-                          class="menu-item menu-item-type-custom menu-item-object-custom menu-item-237"
-                        >
-                          <a href="product-list/">Shop</a>
-                        </li>
+                        id="menu-item-237"
+                        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-237"
+                      >
+                        <a href="gallery/">Gallery</a>
+                      </li>
                         <li
                           id="menu-item-238"
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-238"
