--- a/yirga-cheffe/index.html
+++ b/yirga-cheffe/index.html
@@ -4260,7 +4260,7 @@
                           id="menu-item-237"
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-237"
                         >
-                          <a href="product-list/">Shop</a>
+                          <a href="gallery/">Gallery</a>
                         </li>
                         <li
                           id="menu-item-238"
