--- a/index.html
+++ b/index.html
@@ -3624,7 +3624,12 @@
                         >
                           <a href="about-us/">About</a>
                         </li>
-                        
+                        <li
+                          id="menu-item-238"
+                          class="menu-item menu-item-type-custom menu-item-object-custom menu-item-238"
+                        >
+                          <a href="portfolio-gallery/">Gallery</a>
+                        </li> 
                         <li
                           id="menu-item-238"
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-238"
