--- a/about-us/index.html
+++ b/about-us/index.html
@@ -965,7 +965,7 @@
                     id="mobile-menu-item-76"
                     class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children eltdf-active-item has_sub"
                   >
-                    <a href="/" class="current eltdf-mobile-no-link"
+                    <a href="../" class="current eltdf-mobile-no-link"
                       ><span>Home</span></a
                     >
                     
