--- a/portfolio-gallery/index.html
+++ b/portfolio-gallery/index.html
@@ -361,7 +361,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		  id="mobile-menu-item-76"
 		  class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children eltdf-active-item has_sub"
 		>
-		  <a href="/" class="current eltdf-mobile-no-link"
+		  <a href="../" class="current eltdf-mobile-no-link"
 			><span>Home</span></a
 		  >
 		  
