--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -176,7 +176,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 <div class="eltdf-position-right"><div class="eltdf-position-right-inner">
 <nav class="eltdf-main-menu eltdf-drop-down eltdf-default-nav">
-<ul id="menu-main-menu" class="clearfix"><li id="nav-menu-item-76" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children  has_sub narrow"><a href="/" class=""><span class="item_outer"><span class="item_text">Home</span></span></a>
+<ul id="menu-main-menu" class="clearfix"><li id="nav-menu-item-76" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children  has_sub narrow"><a href="../" class=""><span class="item_outer"><span class="item_text">Home</span></span></a>
 
 </li>
 <li  id="nav-menu-item-77" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children  has_sub wide eltdf-wide-menu-full-width"><a href="../about-us/" class=" current "><span class="item_outer"><span class="item_text">About Us</span></span></a>
@@ -214,7 +214,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 <div class="eltdf-position-right"><div class="eltdf-position-right-inner">
 <nav class="eltdf-main-menu eltdf-drop-down eltdf-sticky-nav">
-<ul id="menu-main-menu-1" class="clearfix"><li id="sticky-nav-menu-item-76" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children  has_sub narrow"><a href="/" class=""><span class="item_outer"><span class="item_text">Home</span><span class="plus"></span></span></a>
+<ul id="menu-main-menu-1" class="clearfix"><li id="sticky-nav-menu-item-76" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children  has_sub narrow"><a href="../" class=""><span class="item_outer"><span class="item_text">Home</span><span class="plus"></span></span></a>
 
 </li>
 <li id="sticky-nav-menu-item-77" class="menu-item menu-item-type-custom menu-item-object-custom  menu-item-has-children  has_sub narrow"><a href="../about-us/" class=" current "><span class="item_outer"><span class="item_text">About us</span><span class="plus"></span></span></a>
@@ -308,7 +308,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		  id="mobile-menu-item-76"
 		  class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children eltdf-active-item has_sub"
 		>
-		  <a href="/" class="current eltdf-mobile-no-link"
+		  <a href="../" class="current eltdf-mobile-no-link"
 			><span>Home</span></a
 		  >
 		  
@@ -493,7 +493,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 </div>
 </div> </div>
 <div class="eltdf-grid-col-6">
-<div id="nav_menu-3" class="widget eltdf-footer-bottom-column-2 widget_nav_menu"><div class="menu-footer-menu-container"><ul id="menu-footer-menu" class="menu"><li id="menu-item-234" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-234"><a href="/">Home</a></li>
+<div id="nav_menu-3" class="widget eltdf-footer-bottom-column-2 widget_nav_menu"><div class="menu-footer-menu-container"><ul id="menu-footer-menu" class="menu"><li id="menu-item-234" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-234"><a href="../">Home</a></li>
 <li id="menu-item-235" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-235"><a href="../about-us/index.html">About</a></li>
 <li id="menu-item-237" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-237"><a href="../portfolio-gallery/">Gallery</a></li>
 <li id="menu-item-238" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-238"><a href="index.html" aria-current="page">Contact</a></li>
