--- a/harrar/index.html
+++ b/harrar/index.html
@@ -748,7 +748,7 @@
                         id="nav-menu-item-76"
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children has_sub narrow"
                       >
-                        <a href="/" class=""
+                        <a href="../" class=""
                           ><span class="item_outer"
                             ><span class="item_text">Home</span
                             ><i
@@ -2069,7 +2069,7 @@
                   id="mobile-menu-item-76"
                   class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children eltdf-active-item has_sub"
                 >
-                  <a href="/" class="current eltdf-mobile-no-link"
+                  <a href="../" class="current eltdf-mobile-no-link"
                   ><span>Home</span></a
                   >
                   
