logo fized, related  secton added

--- a/index.html
+++ b/index.html
@@ -2355,7 +2355,7 @@
                                                     >
                                                       <a
                                                         itemprop="url"
-                                                        href="limu/"
+                                                        href="Limu/"
                                                         title=" Limu"
                                                       >
                                                         <img
@@ -2385,7 +2385,7 @@
                                                     >
                                                       <a
                                                         itemprop="url"
-                                                        href="limu/"
+                                                        href="Limu/"
                                                         title="Limu"
                                                       >
                                                       Limu
@@ -2409,7 +2409,7 @@
                                                       >
                                                         <a
                                                           itemprop="url"
-                                                          href="limu/"
+                                                          href="Limu/"
                                                           target="_self"
                                                           class="eltdf-btn eltdf-btn-medium eltdf-btn-simple eltdf-btn-dash eltdf-blog-list-button eltdf-btn-dash"
                                                         >
