ttitle and map fixed

--- a/Guji/index.html
+++ b/Guji/index.html
@@ -820,7 +820,7 @@
             <div class="eltdf-title-wrapper">
               <div class="eltdf-title-inner">
                 <div class="eltdf-grid">
-                  <h1 class="eltdf-page-title entry-title">Location</h1>
+                  <h1 class="eltdf-page-title entry-title">Guji</h1>
                 </div>
               </div>
             </div>
@@ -835,11 +835,7 @@
                         <div class="wpb_column vc_column_container vc_col-sm-12">
                           <div class="vc_column-inner">
                             <div class="wpb_wrapper">
-                              <div class="eltdf-section-title-holder">
-                                <div class="eltdf-st-inner">
-                                  <h2 class="eltdf-st-title">Guji</h2>
-                                </div>
-                              </div>
+                             
 
                               <div class="wpb_text_column wpb_content_element">
                                 <div class="wpb_wrapper">
@@ -867,7 +863,7 @@
                               <div class="eltdf-google-map-holder">
                                 <iframe
                                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3939.978127936392!2d35.49730971493466!3d9.065756690907962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1654ec14cd190e41%3A0xb10a7390bda09c4c!2sGuji!5e0!3m2!1sen!2set!4v1646740504417!5m2!1sen!2set"
-                                  width="100%" height="600" style="border: 0" allowfullscreen=""
+                                  width="100%" height="600" style="border: 0" allowfullscreen="" class='new-map'
                                   loading="lazy"></iframe>
                                 <div class="eltdf-google-map-overlay"></div>
                               </div>
