--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -441,9 +441,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class="wpb_wrapper"><div class="eltdf-section-title-holder  ">
 <div class="eltdf-st-inner">
 <h3 class="eltdf-st-title">
-Get in Touch </h3>
-<p class="eltdf-st-text">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea. </p>
+Get in Touch !</h3>
+<p class="eltdf-st-text">Reach out to us through our contact information listed below. </p>
 </div>
 </div><div class="vc_empty_space" style="height: 25px"><span class="vc_empty_space_inner"></span></div><div class="eltdf-icon-list-holder ">
 
