--- a/harrar/index.html
+++ b/harrar/index.html
@@ -1143,7 +1143,7 @@
               <div class="eltdf-title-wrapper">
                 <div class="eltdf-title-inner">
                   <div class="eltdf-grid">
-                    <h1 class="eltdf-page-title entry-title">Location</h1>
+                    <h1 class="eltdf-page-title entry-title">Harrar</h1>
                   </div>
                 </div>
               </div>
@@ -1164,11 +1164,7 @@
                           >
                             <div class="vc_column-inner">
                               <div class="wpb_wrapper">
-                                <div class="eltdf-section-title-holder">
-                                  <div class="eltdf-st-inner">
-                                    <h2 class="eltdf-st-title">Harrar</h2>
-                                  </div>
-                                </div>
+                                
 
                                 <div
                                   class="wpb_text_column wpb_content_element"
@@ -1213,7 +1209,7 @@
                                     width="100%s"
                                     height="600"
                                     style="border: 0"
-                                    allowfullscreen=""
+                                    allowfullscreen="" class='new-map'
                                     loading="lazy"
                                   ></iframe>
                                   <div class="eltdf-google-map-overlay"></div>
