--- a/jimma/index.html
+++ b/jimma/index.html
@@ -1195,14 +1195,10 @@
                             <div class="vc_column-inner">
                               <div class="wpb_wrapper">
                                 <div class="eltdf-google-map-holder">
-                                  <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3941.4446913329903!2d38.76135251493451!3d8.931104592973245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b83b6d23ab9b1%3A0x97b75d80e7061c70!2sYirgacheffe%20Coffee%20Farmers%20Cooperative%20Union!5e0!3m2!1sen!2set!4v1646291831839!5m2!1sen!2set"
-                                    width="100%"
-                                    height="600"
-                                    style="border: 0"
-                                    allowfullscreen="" class='new-map'
-                                    loading="lazy"
-                                  ></iframe>
+                                
+
+                                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1011261.537892578!2d36.13418283681993!3d8.076948497883546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x17adaa0141bfe3bb%3A0x7093ccfbda45c1cd!2sJimma!5e0!3m2!1sen!2set!4v1647607858667!5m2!1sen!2set" width="100%"
+                                  height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                                   <div class="eltdf-google-map-overlay"></div>
                                 </div>
 
